fix video width on mobile

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -30,6 +30,6 @@
 }
 
 .video-container iframe { 
-  width: 80%;
+  width: 100%;
   aspect-ratio: 16 / 9;
 }
